[package]
name = "rusty-packet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# TO BE DEFINED -> KerbeRUSTY
[dependencies]
ascii = "0.9.3"
clap = { version = "4.5.1", features = ["derive"] }
#kerbeiros = "0.2.2"
kerberust = { path = "/Users/maikroservice/github/rust/kerberust"}
kerberos_ccache = "0.0.7"
kerberos_constants = "0.0.9"
ldap3 = "0.11.3"
